separação de paginas

--- a/main.html
+++ b/main.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Aprenda sobre Educação Financeira, Investimentos e como alcançar a Independência Financeira"> 
-    <meta name="author" content="Celia Maria, Eryka Kanashiro, Nathalia Matsunaga"> 
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Aprenda sobre Educação Financeira, Investimentos e como alcançar a Independência Financeira"> 
+     <meta name="author" content="Celia Maria, Eryka Kanashiro, Nathalia Matsunaga"> 
 
-    <!-- FONTS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet" />
+     <!-- FONTS -->
+     <link rel="preconnect" href="https://fonts.googleapis.com" />
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet" />
 
-    <!-- LINKS -->
-    <link rel="stylesheet" href="./main.css" />
+     <!-- LINKS -->
+     <link rel="stylesheet" href="./main.css" />
 
-    <title>Dindin Educação Financeira</title>
+     <title>Dindin Educação Financeira</title>
 </head>
 
 <body>
@@ -27,9 +27,9 @@
             </a>
             <nav class="button-content" id="desktop-main">
                 <ul class="menu-nav">
-                    <li><a href="#cursos">Cursos</a></li>
-                    <li><a href="#blog">Blog</a></li>
-                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="./cursos.html">Cursos</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
                 </ul>
             </nav>
             <nav id="mobile-main">
@@ -39,9 +39,9 @@
                     <span></span>
                     <span></span>
                     <ul id="mobile-main-content">
-                        <li><a href="#cursos">Cursos</a></li>
-                        <li><a href="#blog">Blog</a></li>
-                        <li><a href="#contato">Contato</a></li>
+                        <li><a href="./cursos.html">Cursos</a></li>
+                        <li><a href="./blog.html">Blog</a></li>
+                        <li><a href="./contato.html">Contato</a></li>
                     </ul>
                 </div>
             </nav>
@@ -54,7 +54,7 @@
                     <div class="title">
                         <h1>Educação Financeira é tudo de bom</h1>
                         <p>Vem comigo que te mostro por onde começar</p>
-                        <div class="first-button"><a href="#">quero saber mais</a></div>
+                        <div class="first-button"><a href="./cursos.html">quero saber mais</a></div>
                     </div>
                     <div class="img-header">
                         <img src="./img/ilustra-banner.png" alt="imagem ilustra banner" class="header-img" />
@@ -73,7 +73,7 @@
                                 Duis aute irure dolor in reprehenderit in voluptate velit es se cillum dolore eu fugiat nulla pariatur.
                             </p>
                             <div class="start-button">
-                                <a href="#curso">começar agora</a>
+                                <a href="./curso.html">começar agora</a>
                             </div>
                         </div>
                         <div class="img-services">
@@ -82,7 +82,7 @@
                             <p>
                                 Duis aute irure dolor in reprehenderit in voluptate velit es se cillum dolore eu fugiat nulla pariatur.
                             </p>
-                            <div class="start-button"><a href="#">começar agora</a></div>
+                            <div class="start-button"><a href="./contato.html">começar agora</a></div>
                         </div>
                         <div class="img-services">
                             <img src="./img/ilustra-independencia.png" alt="imagem ilustra-independencia" class="img-mobile" />
@@ -90,7 +90,7 @@
                             <p>
                                 Duis aute irure dolor in reprehenderit in voluptate velit es se cillum dolore eu fugiat nulla pariatur.
                             </p>
-                            <div class="start-button"><a href="#">começar agora</a></div>
+                            <div class="start-button"><a href="./contato.html">começar agora</a></div>
                         </div>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                         </div>
                     </div>
                     <div class="link-posts">
-                        <div class="posts"><a href="#post">ver todos os posts</a></div>
+                        <div class="posts"><a href="./post.html">ver todos os posts</a></div>
                     </div>
                 </div>
             </div>
@@ -408,7 +408,7 @@
                                     Duis aute irure dolor in reprehenderit in voluptate velit es se cillum dolore eu fugiat nulla pariatur.
                                 </p>
                                 <div class="start-button-post">
-                                    <a href="#curso">começar agora</a>
+                                    <a href="./curso.html">começar agora</a>
                                 </div>
                             </div>
 
@@ -419,7 +419,7 @@
                                     Duis aute irure dolor in reprehenderit in voluptate velit es se cillum dolore eu fugiat nulla pariatur.
                                 </p>
                                 <div class="start-button-post">
-                                    <a href="#">começar agora</a>
+                                    <a href="./contato.html">começar agora</a>
                                 </div>
                             </div>
 
@@ -430,7 +430,7 @@
                                     Duis aute irure dolor in reprehenderit in voluptate velit es se cillum dolore eu fugiat nulla pariatur.
                                 </p>
                                 <div class="start-button-post">
-                                    <a href="#">começar agora</a>
+                                    <a href="./contato.html">começar agora</a>
                                 </div>
                             </div>
                         </div>
