separação pagina HTLM - Links

--- a/blog.html
+++ b/blog.html
@@ -30,14 +30,14 @@
   <body>
     <header class="header-position">
       <div class="navbar-content">
-        <a href="#">
+        <a href="./index.html">
           <img src="./img/logo-header.png" alt="logotipo dindin" />
         </a>
         <nav class="button-content" id="desktop-main">
           <ul class="menu-nav">
-            <li><a href="#cursos">Cursos</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li><a href="#contato">Contato</a></li>
+            <li><a href="./cursos.html">Cursos</a></li>
+            <li><a href="./blog.html">Blog</a></li>
+            <li><a href="./contato.html">Contato</a></li>
           </ul>
         </nav>
         <nav id="mobile-main">
@@ -47,9 +47,9 @@
             <span></span>
             <span></span>
             <ul id="mobile-main-content">
-              <li><a href="#cursos">Cursos</a></li>
-              <li><a href="#blog">Blog</a></li>
-              <li><a href="#contato">Contato</a></li>
+              <li><a href="./cursos.html">Cursos</a></li>
+              <li><a href="./blog.html">Blog</a></li>
+              <li><a href="./contato.html">Contato</a></li>
             </ul>
           </div>
         </nav>
@@ -68,7 +68,7 @@
               </p>
             </div>
             <div class="blog-img">
-              <img src="./img/ilustra-blog.png" alt="" />
+              <img src="./img/ilustra-blog.png" alt="imagem ilustra-blog" />
             </div>
           </div>
         </div>
@@ -77,7 +77,11 @@
             <div class="flexbox-gallery">
               <div class="gallery">
                 <img src="./img/superMulher.jpg" alt="imagem super mulher" />
-                <h3>On the other hand, we denounce 1</h3>
+                <h3>
+                  <a href="./post.html" class="link-blog-img">
+                    On the other hand, we denounce
+                  </a>
+                </h3>
                 <p>
                   On the other hand, we denounce with righteous indignation and
                   dislike men who are so beguiled and demoralized by the charms
@@ -87,7 +91,11 @@
               </div>
               <div class="gallery">
                 <img src="./img/superCasa.jpg" alt="imagem super casa" />
-                <h3>On the other hand, we denounce 2</h3>
+                <h3>
+                  <a href="./post.html" class="link-blog-img">
+                    On the other hand, we denounce
+                  </a>
+                </h3>
                 <p>
                   On the other hand, we denounce with righteous indignation and
                   dislike men who are so beguiled and demoralized by the charms
@@ -97,7 +105,11 @@
               </div>
               <div class="gallery">
                 <img src="./img/superEquipe.jpg" alt="imagem super equipe" />
-                <h3>On the other hand, we denounce 3</h3>
+                <h3>
+                  <a href="./post.html" class="link-blog-img">
+                    On the other hand, we denounce
+                  </a>
+                </h3>
                 <p>
                   On the other hand, we denounce with righteous indignation and
                   dislike men who are so beguiled and demoralized by the charms
@@ -110,7 +122,11 @@
                   src="./img/superParceiros.jpg"
                   alt="imagem super parceiros"
                 />
-                <h3>On the other hand, we denounce 4</h3>
+                <h3>
+                  <a href="./post.html" class="link-blog-img">
+                    On the other hand, we denounce
+                  </a>
+                </h3>
                 <p>
                   On the other hand, we denounce with righteous indignation and
                   dislike men who are so beguiled and demoralized by the charms
@@ -120,7 +136,11 @@
               </div>
               <div class="gallery">
                 <img src="./img/superDupla.jpg" alt="imagem super dupla" />
-                <h3>On the other hand, we denounce 5</h3>
+                <h3>
+                  <a href="./post.html" class="link-blog-img">
+                    On the other hand, we denounce
+                  </a>
+                </h3>
                 <p>
                   On the other hand, we denounce with righteous indignation and
                   dislike men who are so beguiled and demoralized by the charms
@@ -130,7 +150,11 @@
               </div>
               <div class="gallery">
                 <img src="./img/superTro.jpg" alt="imagem super trio" />
-                <h3>On the other hand, we denounce 6</h3>
+                <h3>
+                  <a href="./post.html" class="link-blog-img">
+                    On the other hand, we denounce
+                  </a>
+                </h3>
                 <p>
                   On the other hand, we denounce with righteous indignation and
                   dislike men who are so beguiled and demoralized by the charms
@@ -145,18 +169,22 @@
     </main>
     <footer>
       <div class="logo-footer">
-        <img src="./img/logo-footer.png" alt="" />
+        <img src="./img/logo-footer.png" alt="logotipo dindin" />
       </div>
       <div class="menu-footer">
         <ul class="menu-footer1">
-          <li><a href="#cursos">Cursos</a></li>
-          <li><a href="#blog">Blog</a></li>
-          <li><a href="#contato">Contato</a></li>
+          <li><a href="./cursos.html">Cursos</a></li>
+          <li><a href="./blog.html">Blog</a></li>
+          <li><a href="./contato.html">Contato</a></li>
         </ul>
       </div>
       <div class="links-footer">
-        <div class="txt-footer"><a href="#">quero ser prof</a></div>
-        <div class="txt-footer"><a href="#">aqui tem outro link</a></div>
+        <div class="txt-footer">
+          <a href="./contato.html">quero ser prof</a>
+        </div>
+        <div class="txt-footer">
+          <a href="./contato.html">aqui tem outro link</a>
+        </div>
       </div>
     </footer>
   </body>
