--- a/curso.html
+++ b/curso.html
@@ -30,14 +30,14 @@
   <body>
     <header class="header-position">
       <div class="navbar-content">
-        <a href="#">
+        <a href="./index.html">
           <img src="./img/logo-header.png" alt="logotipo dindin" />
         </a>
         <nav class="button-content" id="desktop-main">
           <ul class="menu-nav">
-            <li><a href="#cursos">Cursos</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li><a href="#contato">Contato</a></li>
+            <li><a href="./cursos.html">Cursos</a></li>
+            <li><a href="./blog.html">Blog</a></li>
+            <li><a href="./contato.html">Contato</a></li>
           </ul>
         </nav>
         <nav id="mobile-main">
@@ -47,9 +47,9 @@
             <span></span>
             <span></span>
             <ul id="mobile-main-content">
-              <li><a href="#cursos">Cursos</a></li>
-              <li><a href="#blog">Blog</a></li>
-              <li><a href="#contato">Contato</a></li>
+              <li><a href="./cursos.html">Cursos</a></li>
+              <li><a href="./blog.html">Blog</a></li>
+              <li><a href="./contato.html">Contato</a></li>
             </ul>
           </div>
         </nav>
@@ -72,7 +72,10 @@
               </p>
             </div>
             <div class="curso-img">
-              <img src="./img/ilustra-poupando.png" alt="" />
+              <img
+                src="./img/ilustra-poupando.png"
+                alt="imagem ilustra-poupando"
+              />
             </div>
           </div>
         </div>
@@ -165,18 +168,22 @@
     </main>
     <footer>
       <div class="logo-footer">
-        <img src="./img/logo-footer.png" alt="" />
+        <img src="./img/logo-footer.png" alt="logotipo dindin" />
       </div>
       <div class="menu-footer">
         <ul class="menu-footer1">
-          <li><a href="#cursos">Cursos</a></li>
-          <li><a href="#blog">Blog</a></li>
-          <li><a href="#contato">Contato</a></li>
+          <li><a href="./cursos.html">Cursos</a></li>
+          <li><a href="./blog.html">Blog</a></li>
+          <li><a href="./contato.html">Contato</a></li>
         </ul>
       </div>
       <div class="links-footer">
-        <div class="txt-footer"><a href="#">quero ser prof</a></div>
-        <div class="txt-footer"><a href="#">aqui tem outro link</a></div>
+        <div class="txt-footer">
+          <a href="./contato.html">quero ser prof</a>
+        </div>
+        <div class="txt-footer">
+          <a href="./contato.html">aqui tem outro link</a>
+        </div>
       </div>
     </footer>
   </body>
