--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </a>
         <nav class="button-content" id="desktop-main">
           <ul class="menu-nav">
-            <li><a href="#cursos">Cursos</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li><a href="#contato">Contato</a></li>
+            <li><a href="./cursos.html">Cursos</a></li>
+            <li><a href="./blog.html">Blog</a></li>
+            <li><a href="./contato.html">Contato</a></li>
           </ul>
         </nav>
         <nav id="mobile-main">
@@ -47,9 +47,9 @@
             <span></span>
             <span></span>
             <ul id="mobile-main-content">
-              <li><a href="#cursos">Cursos</a></li>
-              <li><a href="#blog">Blog</a></li>
-              <li><a href="#contato">Contato</a></li>
+              <li><a href="./cursos.html">Cursos</a></li>
+              <li><a href="./blog.html">Blog</a></li>
+              <li><a href="./contato.html">Contato</a></li>
             </ul>
           </div>
         </nav>
@@ -62,7 +62,9 @@
             <div class="title">
               <h1>Educação Financeira é tudo de bom</h1>
               <p>Vem comigo que te mostro por onde começar</p>
-              <div class="first-button"><a href="#">quero saber mais</a></div>
+              <div class="first-button">
+                <a href="./cursos.html">quero saber mais</a>
+              </div>
             </div>
             <div class="img-header">
               <img
@@ -90,7 +92,7 @@
                   se cillum dolore eu fugiat nulla pariatur.
                 </p>
                 <div class="start-button">
-                  <a href="#curso">começar agora</a>
+                  <a href="./curso.html">começar agora</a>
                 </div>
               </div>
               <div class="img-services">
@@ -104,7 +106,9 @@
                   Duis aute irure dolor in reprehenderit in voluptate velit es
                   se cillum dolore eu fugiat nulla pariatur.
                 </p>
-                <div class="start-button"><a href="#">começar agora</a></div>
+                <div class="start-button">
+                  <a href="./curso.html">começar agora</a>
+                </div>
               </div>
               <div class="img-services">
                 <img
@@ -117,7 +121,9 @@
                   Duis aute irure dolor in reprehenderit in voluptate velit es
                   se cillum dolore eu fugiat nulla pariatur.
                 </p>
-                <div class="start-button"><a href="#">começar agora</a></div>
+                <div class="start-button">
+                  <a href="./curso.html">começar agora</a>
+                </div>
               </div>
             </div>
           </div>
@@ -177,10 +183,18 @@
       <section class="additional-info">
         <div class="grey-container">
           <div class="centralize-container">
-            <h3>Mais conteúdo para você</h3>
+            <h3>
+              <a href="./blog.html" class="link-h3-blog">
+                MAIS CONTEUDO PARA VOCE
+              </a>
+            </h3>
             <div class="flexbox-additional">
               <div class="more-content">
-                <img src="./img/timeMoney.jpg" alt="imagem time money " />
+                <img
+                  src="./img/timeMoney.jpg"
+                  alt="imagem time money "
+                  class="more-cont-img"
+                />
                 <div class="txt-content">
                   <div class="title-green">Itaque earum rerum</div>
                   <div class="txt-bold">
@@ -214,7 +228,9 @@
               </div>
             </div>
             <div class="link-posts">
-              <div class="posts"><a href="#post">ver todos os posts</a></div>
+              <div class="posts">
+                <a href="./post.html">ver todos os posts</a>
+              </div>
             </div>
           </div>
         </div>
@@ -226,14 +242,18 @@
       </div>
       <div class="menu-footer">
         <ul class="menu-footer1">
-          <li><a href="#cursos">Cursos</a></li>
-          <li><a href="#blog">Blog</a></li>
-          <li><a href="#contato">Contato</a></li>
+          <li><a href="./cursos.html">Cursos</a></li>
+          <li><a href="./blog.html">Blog</a></li>
+          <li><a href="./contato.html">Contato</a></li>
         </ul>
       </div>
       <div class="links-footer">
-        <div class="txt-footer"><a href="#">quero ser prof</a></div>
-        <div class="txt-footer"><a href="#">aqui tem outro link</a></div>
+        <div class="txt-footer">
+          <a href="./contato.html">quero ser prof</a>
+        </div>
+        <div class="txt-footer">
+          <a href="./contato.html">aqui tem outro link</a>
+        </div>
       </div>
     </footer>
   </body>
