--- a/cursos.html
+++ b/cursos.html
@@ -30,14 +30,14 @@
   <body>
     <header class="header-position">
       <div class="navbar-content">
-        <a href="#">
+        <a href="./index.html">
           <img src="./img/logo-header.png" alt="logotipo dindin" />
         </a>
         <nav class="button-content" id="desktop-main">
           <ul class="menu-nav">
-            <li><a href="#cursos">Cursos</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li><a href="#contato">Contato</a></li>
+            <li><a href="./cursos.html">Cursos</a></li>
+            <li><a href="./blog.html">Blog</a></li>
+            <li><a href="./contato.html">Contato</a></li>
           </ul>
         </nav>
         <nav id="mobile-main">
@@ -47,9 +47,9 @@
             <span></span>
             <span></span>
             <ul id="mobile-main-content">
-              <li><a href="#cursos">Cursos</a></li>
-              <li><a href="#blog">Blog</a></li>
-              <li><a href="#contato">Contato</a></li>
+              <li><a href="./cursos.html">Cursos</a></li>
+              <li><a href="./blog.html">Blog</a></li>
+              <li><a href="./contato.html">Contato</a></li>
             </ul>
           </div>
         </nav>
@@ -66,7 +66,7 @@
             <div class="img-cursos">
               <img
                 src="./img/ilustra-poupando.png"
-                alt=""
+                alt="imaagem ilustra-poupando"
                 class="imagem-mobile"
               />
             </div>
@@ -82,7 +82,7 @@
                 nesciunt.
               </p>
               <div class="cursos-button">
-                <a href="#curso">começar agora</a>
+                <a href="./curso.html">começar agora</a>
               </div>
             </div>
           </div>
@@ -91,7 +91,7 @@
             <div class="img-cursos">
               <img
                 src="./img/ilustra-investimento.png"
-                alt=""
+                alt="imagem ilustra-investimento"
                 class="imagem-mobile"
               />
             </div>
@@ -106,7 +106,9 @@
                 consequuntur magni dolores eos qui ratione voluptatem sequi
                 nesciunt.
               </p>
-              <div class="cursos-button"><a href="#">começar agora</a></div>
+              <div class="cursos-button">
+                <a href="./curso.html">começar agora</a>
+              </div>
             </div>
           </div>
           <div class="line"></div>
@@ -114,7 +116,7 @@
             <div class="img-cursos">
               <img
                 src="./img/ilustra-independencia.png"
-                alt=""
+                alt="imagem ilustra-independencia"
                 class="imagem-mobile"
               />
             </div>
@@ -129,7 +131,9 @@
                 consequuntur magni dolores eos qui ratione voluptatem sequi
                 nesciunt.
               </p>
-              <div class="cursos-button"><a href="#">começar agora</a></div>
+              <div class="cursos-button">
+                <a href="./curso.html">começar agora</a>
+              </div>
             </div>
           </div>
         </div>
@@ -137,18 +141,22 @@
     </main>
     <footer>
       <div class="logo-footer">
-        <img src="./img/logo-footer.png" alt="" />
+        <img src="./img/logo-footer.png" alt="logotipo dindin" />
       </div>
       <div class="menu-footer">
         <ul class="menu-footer1">
-          <li><a href="#cursos">Cursos</a></li>
-          <li><a href="#blog">Blog</a></li>
-          <li><a href="#contato">Contato</a></li>
+          <li><a href="./cursos.html">Cursos</a></li>
+          <li><a href="./blog.html">Blog</a></li>
+          <li><a href="./contato.html">Contato</a></li>
         </ul>
       </div>
       <div class="links-footer">
-        <div class="txt-footer"><a href="#">quero ser prof</a></div>
-        <div class="txt-footer"><a href="#">aqui tem outro link</a></div>
+        <div class="txt-footer">
+          <a href="./contato.html">quero ser prof</a>
+        </div>
+        <div class="txt-footer">
+          <a href="./contato.html">aqui tem outro link</a>
+        </div>
       </div>
     </footer>
   </body>
