separação paginas CSS

--- a/curso.html
+++ b/curso.html
@@ -22,7 +22,7 @@
     />
 
     <!-- LINKS -->
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./css/curso.css" />
 
     <title>Dindin Educação Financeira - Curso</title>
   </head>
