--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
     />
 
     <!-- LINKS -->
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./css/blog.css" />
 
     <title>Dindin Educação Financeira - Blog</title>
   </head>
