--- a/contato.html
+++ b/contato.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet" />
 
     <!-- LINKS -->
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./css/contato.css" />
 
     <title>Dindin Educação Financeira - Contato</title>
 </head>
