--- a/cursos.html
+++ b/cursos.html
@@ -22,7 +22,7 @@
     />
 
     <!-- LINKS -->
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./css/cursos.css" />
 
     <title>Dindin Educação Financeira - Cursos</title>
   </head>
