--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     />
 
     <!-- LINKS -->
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./css/index.css" />
 
     <title>Dindin Educação Financeira</title>
   </head>
 
   <body>
-    <header class="header-position">
+    <header class="header-position" id="topo">
       <div class="navbar-content">
         <a href="#">
           <img src="./img/logo-header.png" alt="logotipo dindin" />
@@ -185,7 +185,7 @@
           <div class="centralize-container">
             <h3>
               <a href="./blog.html" class="link-h3-blog">
-                MAIS CONTEUDO PARA VOCE
+                Mais Conteudo para você
               </a>
             </h3>
             <div class="flexbox-additional">
@@ -236,6 +236,7 @@
         </div>
       </section>
     </main>
+
     <footer>
       <div class="logo-footer">
         <img src="./img/logo-footer.png" alt="" />
