--- a/post.html
+++ b/post.html
@@ -22,7 +22,7 @@
     />
 
     <!-- LINKS -->
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./css/post.css" />
 
     <title>Dindin Educação Financeira - Post</title>
   </head>
